Fix width overflow and suppress hydration warnings

--- a/src/app/components/general/dropdown/styles.scss
+++ b/src/app/components/general/dropdown/styles.scss
@@ -1,6 +1,6 @@
 @use './variables' as vars;
 
-$min-width: 100px;
+$min-width: 150px;
 $dropdown-width: 500px;
 
 .custom-select {
@@ -62,6 +62,7 @@ $dropdown-width: 500px;
     margin-top: 5px;
     max-height: 200px;
     overflow-y: auto !important;
+    overflow-x: hidden;
     z-index: 1;
 
     &:focus-within {
@@ -108,6 +109,19 @@ $dropdown-width: 500px;
 
       .label {
         @include vars.border-label($margin: -.7rem 1rem, $font-size: 1rem);
+        width: fit-content;
+        max-width: 90%;
+
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-wrap: nowrap;
+
+        &[title]:hover::after {
+          content: attr(title);
+          position: absolute;
+          top: -100%;
+          left: 0;
+        }
       }
     }
   }
